--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     
-    <!-- Permissions for OnlyUs app -->
+    <!-- Simple permissions for OnlyUs app -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -12,8 +12,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     
-    <!-- Push notification permissions -->
-    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <!-- Notification permissions -->
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     
@@ -46,10 +45,6 @@
             android:windowSoftInputMode="adjustResize"
             android:screenOrientation="portrait">
             
-            <!-- Specifies an Android theme to apply to this Activity as soon as
-                 the Android process has started. This theme is visible to the user
-                 while the Flutter UI initializes. After that, this theme continues
-                 to determine the Window background behind the Flutter UI. -->
             <meta-data
               android:name="io.flutter.embedding.android.NormalTheme"
               android:resource="@style/NormalTheme" />
@@ -60,7 +55,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
             
-            <!-- Deep link support for OnlyUs -->
+            <!-- Deep link support -->
             <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -69,7 +64,7 @@
                       android:host="onlyus.app" />
             </intent-filter>
             
-            <!-- Custom URL scheme for OnlyUs -->
+            <!-- Custom URL scheme -->
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -90,7 +85,7 @@
         <!-- OneSignal Push Notification Service -->
         <service android:name="com.onesignal.OSFocusHandler" />
         
-        <!-- Notification Channel for Android 8+ -->
+        <!-- Notification receiver -->
         <receiver
             android:name="com.google.firebase.iid.FirebaseInstanceIdReceiver"
             android:exported="true"
@@ -100,7 +95,7 @@
             </intent-filter>
         </receiver>
         
-        <!-- File Provider for image sharing -->
+        <!-- File Provider -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.fileprovider"
@@ -124,7 +119,7 @@
             android:name="firebase_analytics_collection_enabled"
             android:value="true" />
             
-        <!-- OneSignal App ID (Replace with your actual OneSignal App ID) -->
+        <!-- OneSignal App ID -->
         <meta-data
             android:name="onesignal_app_id"
             android:value="7d95dd17-81f9-4090-a80c-f849a182de99" />
@@ -143,37 +138,32 @@
             android:resource="@xml/network_security_config" />
     </application>
     
-    <!-- Required to query activities that can process text -->
+    <!-- Query intents -->
     <queries>
         <intent>
             <action android:name="android.intent.action.PROCESS_TEXT"/>
             <data android:mimeType="text/plain"/>
         </intent>
         
-        <!-- Camera apps -->
         <intent>
             <action android:name="android.media.action.IMAGE_CAPTURE" />
         </intent>
         
-        <!-- Gallery apps -->
         <intent>
             <action android:name="android.intent.action.GET_CONTENT" />
             <data android:mimeType="image/*" />
         </intent>
         
-        <!-- File picker -->
         <intent>
             <action android:name="android.intent.action.OPEN_DOCUMENT" />
             <data android:mimeType="*/*" />
         </intent>
         
-        <!-- Share intents -->
         <intent>
             <action android:name="android.intent.action.SEND" />
             <data android:mimeType="*/*" />
         </intent>
         
-        <!-- Browser intents -->
         <intent>
             <action android:name="android.intent.action.VIEW" />
             <category android:name="android.intent.category.BROWSABLE" />
